# app

./: bool_array.npy  path.py  pathfinder.py
DS/: DS666.PY
cmake/install/: setup.sh
cmake/log/: latest_build
cmake/my_launcher/: CMakeLists.txt  package.xml
cmake/my_launcher/launch/: run_app.launch.py
fire_detect_car/: yolo11_fire.py
my_project/: 66666666666.py  cv.py  drone_tools.py  firstBSPrealtime.py  first_model_zoo.py  lc.py  path_finder  path_finder.cpp  pathfinder.py  serial1.py  sss.py  text-display.py  timer_executor.py  yolo11(base).py  yolo11.py  yolo112realtime(Backup).py  yolo112realtime.py  yolo112realtimenofire.py  yolo11_fire.py  yolo11_fire_realtime(2).py  yolo11_fire_realtime.py  yolov8s-seg.py  zoom1.py
my_project/11111111/: 11111.py  1111111  1111111.cpp
my_project/11111111/path/: CMakeLists.txt  main.cpp  path.cpp
my_project/path/: CMakeLists.txt  main.cpp  path.cpp  path.hpp
my_project/photo/: s.json
tuning_tool/: isp_tuning  run_tuning.sh
tuning_tool/tuning_cfg/evb_f37_rx3/: cam_x5_config.json  raw10_1920x1080_30fps.json  vpm_x5_config.json
tuning_tool/tuning_cfg/evb_sc230ai_rx3/: cam_x5_config.json
tuning_tool/tuning_cfg/feedback_case/: cam_x5_config.json  vpm_x5_config.json
tuning_tool/tuning_cfg/imx219_rx2/: cam_x5_config.json  raw10_1920x1080_30fps.json
tuning_tool/tuning_cfg/imx415_rx0/: cam_x5_config.json  raw10_3840x2160_30fps.json  vpm_x5_config.json
tuning_tool/tuning_cfg/imx477_rx2/: cam_x5_config.json  raw12_1920x1080_50fps.json  vpm_x5_config.json
tuning_tool/tuning_cfg/imx586_rx0/: cam_x5_config.json  (+1 more)
(+36 files in other folders)
